  change
* support for IN OUT variables by giving a hash argument with the "value" key
  as the input value for the output variable
* ignore placeholders and quotes in SQL comments
* user modules moved to top-level qore module directory from version-specific
  module directory since they are valid for multiple versions of qore


***********
version 3.1
***********

* fixed retrieving NUMBER types from objects/NTYs
* added more Qore exception handling in ocilib object/NTY APIs
* enforce DBI options on NTY retrieval with numeric values


***********
version 3.0
***********

* supports selecting data from LONG columns
* driver supports Oracle Advanced Queueing
* driver now claims the DBI_CAP_AUTORECONNECT capability if Qore support the
 option (with Qore 0.8.7+ - functionality was already in place)


*************
version 2.2.1
*************

* fixed a bug where non-integer values were returned as integers
* fixed a bug in returning negative integer values that were being returned as
  arbitrary-precision numeric values instead of integers
* updated CLOB writing to use the streaming APIs instead of trying to write in
  one large block since there are bugs in some oracle client libraries related
  to trying to write large blocks, and using the streaming apis resolves the
  problem


***********
version 2.2
***********

* fixed bugs in named type support - when an unknown named type is accessed
  the first time, ocilib keeps an invalid entry for the named type in the type
  list; the second time the type is accessed, a crash results
* fixed memory bugs in handling named type bind parameters created by hand
  where the value type is incorrect
* throws an exception if SQLStatement::fetchRow() is called before 
  SQLStatement::next()
* supports the arbitrary-precision numeric type in qore 0.8.6+
* supports DBI options with qore 0.8.6+; options supported:
  + "optimal-numbers": return NUMBER values as an integer if possible, if not